hphp/test/zend/good/Zend/tests/traits/error_012.php.expectf

Fatal error: Call to protected bar::test() from invalid context in %s/error_012.php on line 12
